# SynchMineChat-MainServer

./: .gitignore  CMakeLists.txt  Plan.md  README.md  README_RU.md
resources/: TgBotResponseConfig.json
src/: StringUtility.hpp  main.cpp
src/AsynchContainers/: AsynchMap.hpp  AsynchQueue.hpp  AsynchVector.hpp
src/Services/: Logger.hpp  ServerConfig.hpp  Service.hpp
src/Services/Configs/: CrowConfig.hpp  ServerConfig.hpp  TgBotConfig.hpp  TgBotResponseConfig.hpp
src/Subs/: ClientBrocker.hpp  ClientSubscriber.hpp  Message.hpp  SubUtility.hpp
src/Subs/Subscribers/: CrowSubscriber.hpp  TgBotSubscriber.hpp  TgMessageProcessor.hpp
